# langgraph-swarm-py

./: .gitignore  MASTER_SERVICES_SUMMARY.md  Makefile  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
CallAPIs/: Place_API_test.ipynb  YouTube_API_test.ipynb
examples/: customer_support.ipynb  customer_support.py
examples/customer_support/: README.md  customer_support.py  langgraph.json  pyproject.toml
examples/customer_support/src/agent/: customer_support.ipynb  customer_support.py
examples/master_services/: QUICKSTART.md  README.md  requirements.txt  run_simulation.py
examples/master_services/src/: __init__.py
examples/master_services/src/agents/: __init__.py  company_simulation.py
examples/master_services/src/data/: __init__.py  company_data.py
examples/research/: README.md  langgraph.json  pyproject.toml
examples/research/src/agent/: agent.ipynb  agent.py  configuration.py  prompts.py  utils.py
langgraph_swarm/: __init__.py  errors.py  handoff.py  swarm.py
tests/: test_import.py  test_swarm.py  test_validation_error.py
