[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "langgraph-swarm"
version = "0.0.1"
description = "An implementation of a multi-agent swarm using LangGraph"
authors = [
    {name = "Vadym Barda", email = "19161700+vbarda@users.noreply.github.com "}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.71",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
